--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,290 +1,12 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-a {
-    text-decoration: none;
-    color: currentColor;
-}
-
-li {
-    list-style: none;
-}
-button {
-    border: none;
-}
-
-body {
-    width: 100%;
-    font-family: Gotham, sans-serif;
-    font-size: 14px;
-    font-weight: 400;
-}
-
-@mixin navFont {
-    font-family: inherit;
-    font-size: 14px;
-    font-weight: 500;
-    text-transform: uppercase;
-}
-
-@mixin flex($justifyContent, $alignItems) {
-    display: flex;
-    justify-content: $justifyContent;
-    align-items: $alignItems;
-}
-
-@mixin hoverCursor {
-    &:hover {
-        cursor: pointer;
-        opacity: .8;
-    }
-}
-
-$loginBntColor: #e94e38;
-$navLinkColor: #96a6a7;
-$searchBgColor: #e2dee0;
-$headerFontColor: #fff;
-$firstBgColor: #1baf5d;
-
-@mixin transparent-input {
-    background-color: rgba(255, 255, 255, .2);
-    border: 1px solid rgba(255, 255, 255, .2);
-    border-radius: 26px;
-    padding-left: 30px;
-    color: $headerFontColor;
-    font-size: 18px;
-    font-weight: 400;
-    outline: none;
-}
-@mixin text-header {
-    text-shadow: 0 1px 1px rgba(0, 0, 1, 0.15);
-    color: $headerFontColor;
-    text-align: center;
-    font-weight: 500;
-}
-
-@mixin roundBtn {
-    display: block;
-    box-shadow: 0 2px 0 #c1412e;
-    background-color: #e94e38;
-    border-radius: 45px;
-    outline: none;
-    @include navFont;
-    font-weight: 500;
-    color: $headerFontColor;
-}
-
-@mixin round($width, $height, $bgColor) {
-    width: $width;
-    height: $height;
-    border-radius: 50%;
-    background-color: $bgColor;
-    @include flex(center, center);
-}
-
-@mixin hrLine($color) {
-    width: 75%;
-    height: 1px;
-    background-color: $color;
-    margin: 0 auto;
-    border: none;
-}
-
+@import 'normalize';
+@import 'mixins';
+@import 'variables';
 @import 'header';
+@import 'main';
 @import 'filter';
+@import 'posts';
 @import 'offer';
 @import 'footer';
 
-.main {
-    width: 100%;
-    background-color: #f3f1f2;
-}
 
-.posts {
-    max-width: 985px;
-    margin: 0 auto;
-    @include flex(flex-start, flex-start);
-    flex-wrap: wrap;
-    &__post-container {
-        width: 210px;
-        height: 266px;
-        border-radius: 3px;
-        box-shadow: 0 1px 0 #e2dee0;
-        background-color: #ffffff;
-        font-size: 12px;
-        font-weight: 500;
-        margin: 16px 18px;
-        &_large {
-            width: 455px;
-            height: 270px;
-        }
-    }
-    &__post-picture {
-        width: 100%;
-        height: 140px;
-        background-size: cover;
-        border-bottom: 3px solid;
-        position: relative;
-        &_large {
-            height: 120px;
-            padding-bottom: 9px;
-        }
-        &_home {
-            border-color: #1baf5d;
-            background: url(../images/img1.png) no-repeat;
-        }
-        &_music {
-            border-color: #f19e1f;
-            background: url(../images/img2.png) no-repeat;
-        }
-        &_bus {
-            border-color: #88499c;
-            background: url(../images/img1.png) no-repeat;
-        }
-        &_large-home {
-            background: url(../images/img3.png) no-repeat;
-            @include flex(center, flex-end);
-        }
-        &_large-home-second {
-            border-color: #f19e1f;
-            background: url(../images/img4.png) no-repeat;
-            @include flex(center, flex-end);
-        }
-    }
-    &__post-price {
-        width: 65px;
-        height: 25px;
-        background-color: #1baf5d;
-        border-radius: 26px;
-        @include flex(center, center);
-        font-size: 12px;
-        color: #fff;
-        position: absolute;
-        top: 7px;
-        right: 8px;
-    }
-    &__post-icon {
-        @include round(55px, 55px, #fff);
-        border: 3px solid #fff;
-        position: absolute;
-        z-index: 100;
-        &_small {
-            top: 110px;
-            left: 75px;
-        }
-        &_large {
-            top: 95px;
-            left: 22px;
-        }
-        &_home {
-            background: #1baf5d url(../images/home-icon.png) no-repeat center center;
-        }
-        &_music {
-            background: #f19e1f url(../images/music-icon.png) no-repeat center center;
-        }
-        &_bus {
-            background: #88499c url(../images/bus-icon.png) no-repeat center center;
-        }
-        &_home-second {
-            background: #f19e1f url(../images/home-icon.png) no-repeat center center;
-        }
-    }
-    &__overlay {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        color: #fff;
-        font-size: 18px;
-        padding: 25px 35px;
-        opacity: 0;
-        &:hover {
-            opacity: 1;
-        }
-        &_home {
-            background-color: rgba(27, 175, 93, .7);
-        }
-        &_music {
-            background-color: rgba(241, 158, 31, .7);
-        }
-        &_bus {
-            background-color: rgba(136, 73, 156, .7);
-            
-        }
-        
-    }
-    &__show-btn {
-        display: block;
-        width: 137px;
-        height: 31px;
-        border: 2px solid #fff;
-        border-radius: 26px;
-        background-color: transparent;
-        font-size: 12px;
-        @include flex(space-evenly, center);
-        text-transform: uppercase;
-        margin-bottom: 22px;
-    }
-    &__content {
-        text-align: center;
-        padding: 25px 15px 0 15px;
-    }
-    &__post-header {
-        font-size: 14px;
-        color: #566375;
-        font-weight: 500;
-        &_smaller {
-            font-size: 12px;
-           
-            text-transform: uppercase;
-            padding: 19px 0 6px 0;
-        }
-        &_bigger {
-            font-size: 18px;
-            color: #ffffff;
-            text-transform: uppercase;
-            margin-right: 8px;
-            text-shadow: 0 1px 1px rgba(0, 0, 1, 0.15);
-        }
-        &_home {
-            color: #1baf5d;
-        }
-        &_music {
-            color: #f19e1f;
-            padding-top: 35px;
-        }
-        &_bus {
-            color: #88499c;
-        }
-    }
-    &__star {
-        color: #f19e1f;
-        &_empty {
-            color: #fff;
-        }
-    }
-    &__coment {
-        padding-left: 25px;
-    }
-    &__number {
-        color: #96a6a7;
-        font-size: 12px;
-        font-weight: 500;
-        &_light {
-            color: #fff;
-        }
-    }
-    &__load-more {
-        display: block;
-        color: #566375;
-        font-size: 18px;
-        font-weight: 500;
-        line-height: 48px;
-        margin: 16px auto;
-        text-decoration: underline;
-    }
-}
+
