--- a/src/css/style.css
+++ b/src/css/style.css
@@ -179,6 +179,10 @@ body {
       cursor: pointer;
       opacity: .8; }
 
+.main {
+  width: 100%;
+  background-color: #f3f1f2; }
+
 .filter {
   width: 100%;
   height: 60px;
@@ -290,6 +294,213 @@ body {
       .filter__filter-link_hover:hover {
         opacity: .6; }
 
+.posts {
+  max-width: 985px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap; }
+  .posts__post-container {
+    width: 210px;
+    height: 266px;
+    border-radius: 3px;
+    box-shadow: 0 1px 0 #e2dee0;
+    background-color: #fff;
+    font-size: 12px;
+    font-weight: 500;
+    margin: 16px 18px; }
+    .posts__post-container_large {
+      width: 455px;
+      height: 270px; }
+  .posts__post-picture {
+    width: 100%;
+    height: 140px;
+    background-size: cover;
+    border-bottom: 3px solid;
+    position: relative; }
+    .posts__post-picture_large {
+      height: 120px;
+      padding-bottom: 9px; }
+    .posts__post-picture_home {
+      border-color: #1baf5d;
+      background: url(../images/img1.png) no-repeat; }
+    .posts__post-picture_music {
+      border-color: #f19e1f;
+      background: url(../images/img2.png) no-repeat; }
+    .posts__post-picture_bus {
+      border-color: #88499c;
+      background: url(../images/img1.png) no-repeat; }
+    .posts__post-picture_large-home {
+      background: url(../images/img3.png) no-repeat;
+      display: flex;
+      justify-content: center;
+      align-items: flex-end; }
+    .posts__post-picture_large-home-second {
+      border-color: #f19e1f;
+      background: url(../images/img4.png) no-repeat;
+      display: flex;
+      justify-content: center;
+      align-items: flex-end; }
+  .posts__post-price {
+    width: 65px;
+    height: 25px;
+    background-color: #1baf5d;
+    border-radius: 26px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12px;
+    color: #fff;
+    position: absolute;
+    top: 7px;
+    right: 8px; }
+  .posts__post-icon {
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 3px solid #fff;
+    position: absolute;
+    z-index: 100; }
+    .posts__post-icon_small {
+      top: 110px;
+      left: 75px; }
+    .posts__post-icon_large {
+      top: 95px;
+      left: 22px; }
+    .posts__post-icon_home {
+      background: #1baf5d url(../images/home-icon.png) no-repeat center center; }
+    .posts__post-icon_music {
+      background: #f19e1f url(../images/music-icon.png) no-repeat center center; }
+    .posts__post-icon_bus {
+      background: #88499c url(../images/bus-icon.png) no-repeat center center; }
+    .posts__post-icon_home-second {
+      background: #f19e1f url(../images/home-icon.png) no-repeat center center; }
+  .posts__overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    color: #fff;
+    font-size: 18px;
+    padding: 25px 35px;
+    opacity: 0; }
+    .posts__overlay:hover {
+      opacity: 1; }
+    .posts__overlay_home {
+      background-color: rgba(27, 175, 93, 0.7); }
+    .posts__overlay_music {
+      background-color: rgba(241, 158, 31, 0.7); }
+    .posts__overlay_bus {
+      background-color: rgba(136, 73, 156, 0.7); }
+  .posts__show-btn {
+    display: block;
+    width: 137px;
+    height: 31px;
+    border: 2px solid #fff;
+    border-radius: 26px;
+    background-color: transparent;
+    font-size: 12px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    text-transform: uppercase;
+    margin-bottom: 22px; }
+  .posts__content {
+    text-align: center;
+    padding: 25px 15px 0 15px; }
+    .posts__content_large {
+      padding: 17px 17px 17px 22px;
+      text-align: left;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center; }
+  .posts__post-header {
+    font-size: 14px;
+    color: #566375;
+    font-weight: 500; }
+    .posts__post-header_smaller {
+      font-size: 12px;
+      text-transform: uppercase;
+      padding: 19px 0 6px 0; }
+    .posts__post-header_bigger {
+      font-size: 18px;
+      color: #fff;
+      text-transform: uppercase;
+      margin-right: 8px;
+      text-shadow: 0 1px 1px rgba(0, 0, 1, 0.15); }
+    .posts__post-header_home {
+      color: #1baf5d; }
+    .posts__post-header_music {
+      color: #f19e1f;
+      padding-top: 35px; }
+    .posts__post-header_bus {
+      color: #88499c; }
+  .posts__star {
+    color: #f19e1f; }
+    .posts__star_empty {
+      color: #fff; }
+  .posts__coment-block {
+    max-width: 350px;
+    font-size: 18px;
+    position: relative; }
+  .posts__coment {
+    padding-left: 25px; }
+  .posts__user-name {
+    color: #566375;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 35px;
+    text-transform: uppercase; }
+  .posts__user-coment {
+    max-width: 300px;
+    color: #566375;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 300; }
+  .posts__number {
+    color: #96a6a7;
+    font-size: 12px;
+    font-weight: 500; }
+    .posts__number_light {
+      color: #fff; }
+  .posts__load-more {
+    display: block;
+    color: #566375;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 48px;
+    margin: 16px auto;
+    text-decoration: underline; }
+    .posts__load-more_small {
+      display: inline;
+      position: absolute;
+      bottom: 0px;
+      right: 2px;
+      font-weight: 600;
+      font-size: 14px;
+      line-height: 20px;
+      margin: 0; }
+  .posts__user-block {
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #e2dee0;
+    margin-right: 20px; }
+    .posts__user-block_first {
+      background: url(../images/user1.png) no-repeat center center; }
+    .posts__user-block_second {
+      background: url(../images/user2.png) no-repeat center center; }
+
 .offer {
   max-width: 760px;
   margin: 0 auto;
@@ -361,7 +572,7 @@ body {
     width: 62px;
     height: 62px;
     border-radius: 50%;
-    background-color: #1db05e;
+    background-color: #1baf5d;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -484,169 +695,3 @@ body {
     font-size: 14px;
     line-height: 24px;
     margin-top: 65px; }
-
-.main {
-  width: 100%;
-  background-color: #f3f1f2; }
-
-.posts {
-  max-width: 985px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-wrap: wrap; }
-  .posts__post-container {
-    width: 210px;
-    height: 266px;
-    border-radius: 3px;
-    box-shadow: 0 1px 0 #e2dee0;
-    background-color: #ffffff;
-    font-size: 12px;
-    font-weight: 500;
-    margin: 16px 18px; }
-    .posts__post-container_large {
-      width: 455px;
-      height: 270px; }
-  .posts__post-picture {
-    width: 100%;
-    height: 140px;
-    background-size: cover;
-    border-bottom: 3px solid;
-    position: relative; }
-    .posts__post-picture_large {
-      height: 120px;
-      padding-bottom: 9px; }
-    .posts__post-picture_home {
-      border-color: #1baf5d;
-      background: url(../images/img1.png) no-repeat; }
-    .posts__post-picture_music {
-      border-color: #f19e1f;
-      background: url(../images/img2.png) no-repeat; }
-    .posts__post-picture_bus {
-      border-color: #88499c;
-      background: url(../images/img1.png) no-repeat; }
-    .posts__post-picture_large-home {
-      background: url(../images/img3.png) no-repeat;
-      display: flex;
-      justify-content: center;
-      align-items: flex-end; }
-    .posts__post-picture_large-home-second {
-      border-color: #f19e1f;
-      background: url(../images/img4.png) no-repeat;
-      display: flex;
-      justify-content: center;
-      align-items: flex-end; }
-  .posts__post-price {
-    width: 65px;
-    height: 25px;
-    background-color: #1baf5d;
-    border-radius: 26px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 12px;
-    color: #fff;
-    position: absolute;
-    top: 7px;
-    right: 8px; }
-  .posts__post-icon {
-    width: 55px;
-    height: 55px;
-    border-radius: 50%;
-    background-color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 3px solid #fff;
-    position: absolute;
-    z-index: 100; }
-    .posts__post-icon_small {
-      top: 110px;
-      left: 75px; }
-    .posts__post-icon_large {
-      top: 95px;
-      left: 22px; }
-    .posts__post-icon_home {
-      background: #1baf5d url(../images/home-icon.png) no-repeat center center; }
-    .posts__post-icon_music {
-      background: #f19e1f url(../images/music-icon.png) no-repeat center center; }
-    .posts__post-icon_bus {
-      background: #88499c url(../images/bus-icon.png) no-repeat center center; }
-    .posts__post-icon_home-second {
-      background: #f19e1f url(../images/home-icon.png) no-repeat center center; }
-  .posts__overlay {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    color: #fff;
-    font-size: 18px;
-    padding: 25px 35px;
-    opacity: 0; }
-    .posts__overlay:hover {
-      opacity: 1; }
-    .posts__overlay_home {
-      background-color: rgba(27, 175, 93, 0.7); }
-    .posts__overlay_music {
-      background-color: rgba(241, 158, 31, 0.7); }
-    .posts__overlay_bus {
-      background-color: rgba(136, 73, 156, 0.7); }
-  .posts__show-btn {
-    display: block;
-    width: 137px;
-    height: 31px;
-    border: 2px solid #fff;
-    border-radius: 26px;
-    background-color: transparent;
-    font-size: 12px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    text-transform: uppercase;
-    margin-bottom: 22px; }
-  .posts__content {
-    text-align: center;
-    padding: 25px 15px 0 15px; }
-  .posts__post-header {
-    font-size: 14px;
-    color: #566375;
-    font-weight: 500; }
-    .posts__post-header_smaller {
-      font-size: 12px;
-      text-transform: uppercase;
-      padding: 19px 0 6px 0; }
-    .posts__post-header_bigger {
-      font-size: 18px;
-      color: #ffffff;
-      text-transform: uppercase;
-      margin-right: 8px;
-      text-shadow: 0 1px 1px rgba(0, 0, 1, 0.15); }
-    .posts__post-header_home {
-      color: #1baf5d; }
-    .posts__post-header_music {
-      color: #f19e1f;
-      padding-top: 35px; }
-    .posts__post-header_bus {
-      color: #88499c; }
-  .posts__star {
-    color: #f19e1f; }
-    .posts__star_empty {
-      color: #fff; }
-  .posts__coment {
-    padding-left: 25px; }
-  .posts__number {
-    color: #96a6a7;
-    font-size: 12px;
-    font-weight: 500; }
-    .posts__number_light {
-      color: #fff; }
-  .posts__load-more {
-    display: block;
-    color: #566375;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 48px;
-    margin: 16px auto;
-    text-decoration: underline; }
