--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -7,7 +7,7 @@
     &__navigation-bar {
         width: 100%;
         height: 75px;
-        background-color: #fff;
+        background-color: $bgColor;
         @include flex(flex-end, center);
         @include navFont;
     }
